--- a/resources/views/venue.html
+++ b/resources/views/venue.html
@@ -10,80 +10,85 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Select A Venue</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Venue Information</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Event</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<p></p>
-
-<div class="container-fluid">
-    <div class="card-deck">
-        <div class="card">
-            <div class="card-header"><h2>Select a Different Venue</h2></div>
-            <div class="card-body">
-                <form>
-                    <select name="cars" class="custom-select">
-                        <option selected>Custom Select Menu</option>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">Select A Venue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="venue.html">Venue Information</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Event</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="container-fluid">
+                <form class="form-inline">
+                    <select name="venue" class="custom-select" required>
                         <option value="Klute">Klute</option>
                         <option value="Jimmy Allens">Jimmy Allens</option>
                         <option value="Bishop's Mill">Bishop's Mill</option>
                     </select>
+                    <p>  </p>
+                    <button type="submit" class="btn btn-info" formaction="venue.html">Select Venue</button>
                 </form>
             </div>
-            <div class="card-footer"><button type="button" class="btn btn-info">Select Venue</button> </div>
         </div>
-        <p></p>
+    </nav>
+    <p></p>
 
-        <div class="card">
-            <div class="card-header"><h2>Venue Overview</h2></div>
-            <div class="card-body">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Venue Name</th>
-                        <th>Number of Events</th>
-                        <th>Total Visitors</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>Klute</td>
-                        <td>2</td>
-                        <td>352</td>
-                    </tr>
-                    <tr>
-                        <td>Jimmy Allens</td>
-                        <td>4</td>
-                        <td>1287</td>
-                    </tr>
-                    <tr>
-                        <td>Bishop's Mill</td>
-                        <td>1</td>
-                        <td>725</td>
-                    </tr>
-                    </tbody>
-                </table>
+    <div class="container-fluid">
+        <div class="card-deck">
+            <div class="card">
+                <div class="card-header"><h2>Venue Summary</h2></div>
+                <div class="card-body">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Venue Attribute</th>
+                            <th>Value</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Number of Events</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>Number of Visitors</td>
+                            <td>1234</td>
+                        </tr>
+                        <tr>
+                            <td>Average Visitors</td>
+                            <td>265</td>
+                        </tr>
+                        <tr>
+                            <td>First Event</td>
+                            <td>17/11/2017</td>
+                        </tr>
+                        <tr>
+                            <td>Most Recent Event</td>
+                            <td>12/11/2018</td>
+                        </tr>
+                        <tr>
+                            <td>Most Recent Visitor Count</td>
+                            <td>206</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-        <p></p>
+            <p></p>
 
+        </div>
     </div>
-</div>
 
 </body>
 </html>
