--- a/resources/views/home.html
+++ b/resources/views/home.html
@@ -16,17 +16,30 @@
         </button>
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Select A Venue</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Venue Information</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Event</a>
-                </li>
-            </ul>
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="home.html">Select A Venue</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="venue.html">Venue Information</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Event</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="container-fluid">
+                <form class="form-inline">
+                    <select name="venue" class="custom-select" required>
+                        <option value="Klute">Klute</option>
+                        <option value="Jimmy Allens">Jimmy Allens</option>
+                        <option value="Bishop's Mill">Bishop's Mill</option>
+                    </select>
+                    <p>  </p>
+                    <button type="submit" class="btn btn-info" formaction="venue.html">Select Venue</button>
+                </form>
+            </div>
         </div>
     </nav>
     <p></p>
@@ -37,15 +50,15 @@
                 <div class="card-header"><h2>Select a Venue</h2></div>
                 <div class="card-body">
                     <form>
-                        <select name="cars" class="custom-select">
-                            <option selected>Custom Select Menu</option>
+                        <select name="venue" class="custom-select" required>
                             <option value="Klute">Klute</option>
                             <option value="Jimmy Allens">Jimmy Allens</option>
                             <option value="Bishop's Mill">Bishop's Mill</option>
                         </select>
+                        <p></p>
+                        <button type="submit" class="btn btn-info" formaction="venue.html">Select Venue</button>
                     </form>
                 </div>
-                <div class="card-footer"><button type="button" class="btn btn-info">Select Venue</button> </div>
             </div>
             <p></p>
             <div class="card">
@@ -83,6 +96,5 @@
 
         </div>
     </div>
-
 </body>
 </html>
