--- a/resources/views/venue.html
+++ b/resources/views/venue.html
@@ -45,49 +45,105 @@
     <p></p>
 
     <div class="container-fluid">
-        <div class="card-deck">
-            <div class="card">
-                <div class="card-header"><h2>Venue Summary</h2></div>
-                <div class="card-body">
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-                            <th>Venue Attribute</th>
-                            <th>Value</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td>Number of Events</td>
-                            <td>4</td>
-                        </tr>
-                        <tr>
-                            <td>Number of Visitors</td>
-                            <td>1234</td>
-                        </tr>
-                        <tr>
-                            <td>Average Visitors</td>
-                            <td>265</td>
-                        </tr>
-                        <tr>
-                            <td>First Event</td>
-                            <td>17/11/2017</td>
-                        </tr>
-                        <tr>
-                            <td>Most Recent Event</td>
-                            <td>12/11/2018</td>
-                        </tr>
-                        <tr>
-                            <td>Most Recent Visitor Count</td>
-                            <td>206</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <p></p>
+        <div class="alert alert-success"><strong>Current attendance: 423/480</strong></div>
+        <p> OR </p>
+        <div class="alert alert-warning"><strong>Current attendance: 472/480</strong></div>
+        <p> OR </p>
+        <div class="alert alert-danger"><strong>Current attendance: 483/480</strong></div>
+        <p> OR </p>
+        <div class="alert alert-primary"><strong>Not open</strong></div>
+    </div>
 
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-header"><h2>Venue Summary</h2></div>
+            <div class="card-body">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>Venue Attribute</th>
+                        <th>Value</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Number of Events</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>Number of Visitors</td>
+                        <td>1234</td>
+                    </tr>
+                    <tr>
+                        <td>Average Visitors</td>
+                        <td>265</td>
+                    </tr>
+                    <tr>
+                        <td>First Event</td>
+                        <td>17/11/2017</td>
+                    </tr>
+                    <tr>
+                        <td>Most Recent Event</td>
+                        <td>12/11/2018</td>
+                    </tr>
+                    <tr>
+                        <td>Most Recent Visitor Count</td>
+                        <td>206</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
+        <p></p>
+        <div class="card">
+            <div class="card-header"><h2>Events at VENUE</h2></div>
+            <div class="card-body">
+                <table class="table table-striped table-responsive">
+                    <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Opening Hour</th>
+                        <th>Closing Hour</th>
+                        <th>Maximum Capacity</th>
+                        <th>Capacity Reached</th>
+                        <th>Total Visitors</th>
+                        <th>More</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>17/10/2018</td>
+                        <td>22:00</td>
+                        <td>01:30</td>
+                        <td>480</td>
+                        <td>439</td>
+                        <td>489</td>
+                        <td><button class="btn btn-info">More</button></td>
+                    </tr>
+                    <tr>
+                        <td>11/10/2018</td>
+                        <td>22:00</td>
+                        <td>01:30</td>
+                        <td>480</td>
+                        <td>439</td>
+                        <td>489</td>
+                        <td><button class="btn btn-info">More</button></td>
+                    </tr>
+                    <tr>
+                        <td>02/10/2018</td>
+                        <td>22:00</td>
+                        <td>01:30</td>
+                        <td>480</td>
+                        <td>463</td>
+                        <td>512</td>
+                        <td><button class="btn btn-info">More</button></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <p></p>
+
     </div>
 
 </body>
