Added calendar and did some number formatting

--- a/resources/views/update.html
+++ b/resources/views/update.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -79,9 +80,45 @@
                     </form>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-header"><h2>Your Events</h2></div>
+                <div class="card-body" id="cal">
+                    <div class="row row-striped">
+            			<div class="col-2 text-right">
+            				<h1 class="display-4"><span class="badge badge-secondary">23</span></h1>
+            				<h2>OCT</h2>
+            			</div>
+            			<div class="col-10">
+            				<h3 class="text-uppercase"><strong>Ice Cream Social</strong></h3>
+            				<ul class="list-inline">
+            				    <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Monday</li>
+            					<li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 12:30 PM - 2:00 PM</li>
+            					<li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Cafe</li>
+            				</ul>
+            				<p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            			</div>
+            		</div>
+            		<div class="row row-striped">
+            			<div class="col-2 text-right">
+            				<h1 class="display-4"><span class="badge badge-secondary">27</span></h1>
+            				<h2>OCT</h2>
+            			</div>
+            			<div class="col-10">
+            				<h3 class="text-uppercase"><strong>Operations Meeting</strong></h3>
+            				<ul class="list-inline">
+            				    <li class="list-inline-item"><i class="fa fa-calendar-o" aria-hidden="true"></i> Friday</li>
+            					<li class="list-inline-item"><i class="fa fa-clock-o" aria-hidden="true"></i> 2:30 PM - 4:00 PM</li>
+            					<li class="list-inline-item"><i class="fa fa-location-arrow" aria-hidden="true"></i> Room 4019</li>
+            				</ul>
+            				<p>Lorem ipsum dolsit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            			</div>
+            		</div>
+                </div>
+                <a href="newEvent.html" class="btn btn-info" role="button">Create New Event</a>
+            </div>
         </div>
     </div>
-
 
 </body>
 </html>
