--- a/resources/views/newEvent.html
+++ b/resources/views/newEvent.html
@@ -52,9 +52,14 @@
                             <label for="chargeTime">Start Charging Time</label>
                             <select name="chargeTime" class="custom-select" id="chargeTime"></select>
                         </div>
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea class="form-control" id="description" rows="3"></textarea>
+                        </div>
                     </form>
                 </div>
             </div>
+
         </div>
     </div>
 
