--- a/resources/views/update.html
+++ b/resources/views/update.html
@@ -79,6 +79,7 @@
                         </div>
                     </form>
                 </div>
+                <button type="submit" class="btn btn-info" id="submitChanges">Make Changes</button>
             </div>
 
             <div class="card">
