Added button to events

--- a/resources/views/newEvent.html
+++ b/resources/views/newEvent.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
         <div class="card-deck">
             <div class="card">
-                <div class="card-header"><h2>Select a Venue</h2></div>
+                <div class="card-header"><h2>Create New Event</h2></div>
                 <div class="card-body">
                     <form>
                         <div class="form-group">
@@ -58,8 +58,8 @@
                         </div>
                     </form>
                 </div>
+                <button type="submit" class="btn btn-info" id="submitChanges">Create Event</button>
             </div>
-
         </div>
     </div>
 
