--- a/resources/views/update.html
+++ b/resources/views/update.html
@@ -50,7 +50,7 @@
     <div class="container-fluid">
         <div class="card-deck">
             <div class="card">
-                <div class="card-header"><h2>Select a Venue</h2></div>
+                <div class="card-header"><h2>Edit Club Details</h2></div>
                 <div class="card-body">
                     <form>
                         <div class="form-group">
