--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,3 +7,27 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+body {
+	color: white;
+	background-color: #0e1a33;
+}
+
+.card-box {
+	margin: 5px;
+	padding: 20px;
+	background-color: #162951;
+}
+
+.row {
+	margin-top: 10px;
+}
+
+.navbar {
+	color: black;
+}
+
+.chart-hour {
+	display: none;
+}
