--- a/resources/views/newEvent.html
+++ b/resources/views/newEvent.html
@@ -20,7 +20,7 @@
                     <form>
                         <div class="form-group">
                             <label for="eventName">Event Name</label>
-                            <input class="form-control" id="eventName" type="text" placeholder="Name">
+                            <input class="form-control" id="eventName" type="text" placeholder="Name" required>
                         </div>
                         <div class="form-group">
                             <label for="date">Date</label>
@@ -46,7 +46,7 @@
                         </div>
                         <div class="form-group">
                             <label for="price">Ticket Price</label>
-                            <input class="form-control" id="price" type="text" placeholder="Enter Ticket Price", maxlength="4">
+                            <input class="form-control" id="price" type="text" placeholder="Enter Ticket Price" maxlength="4" required>
                         </div>
                         <div class="form-group">
                             <label for="chargeTime">Start Charging Time</label>
@@ -54,7 +54,7 @@
                         </div>
                         <div class="form-group">
                             <label for="description">Description</label>
-                            <textarea class="form-control" id="description" rows="3"></textarea>
+                            <textarea class="form-control" id="description" rows="3" required></textarea>
                         </div>
                     </form>
                 </div>
