Adds Create event page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10483,9 +10483,14 @@ body {
 
 .navbar {
   color: black;
+  margin-bottom: 20px;
 }
 
 .chart-hour {
   display: none;
+}
+
+#newEventContainer {
+  color: #0e1a33;
 }
 
