--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,8 +26,13 @@ body {
 
 .navbar {
 	color: black;
+	margin-bottom: 20px;
 }
 
 .chart-hour {
 	display: none;
+}
+
+#newEventContainer {
+	color: #0e1a33;
 }
